--- a/sigproc.bib
+++ b/sigproc.bib
@@ -1,61 +1,92 @@
-@inproceedings{ionescu2014retrieving,
-  title={Retrieving Diverse Social Images at MediaEval 2014: Challenge, Dataset and Evaluation},
-  author={Ionescu, B. and Popescu, A. and Lupu, A. and Ginsca, A.L. and M{\"u}ller, H.},
-  booktitle={Proceedings of the MediaEval 2014 Multimedia Benchmark Workshop},
-  city = {Barcelona},
-  country = {Spain},
-  year={2014},
+% This file was created with JabRef 2.10.
+% Encoding: MacRoman
+
+
+@InProceedings{Task2015,
+  Title                    = {Retrieving Diverse Social Images at MediaEval 2015: Challenge, Dataset and Evaluation},
+  Author                   = {Ionescu, B. and Popescu, A. and Lupu, A. and Ginsca, A.L. and M{\"u}ller, H.},
+  Booktitle                = {Proceedings of the MediaEval 2015 Multimedia Benchmark Workshop},
+  Year                     = {2015},
+
+  __markedentry            = {[hidden:6]},
+  Owner                    = {hidden},
+  Timestamp                = {2015.08.20}
 }
 
-@inproceedings{ionescu2014div400,
-  title={Div400: a social image retrieval result diversification dataset},
-  author={Ionescu, B. and Radu, A.-L. and Men{\'e}ndez, M. and M{\"u}ller, H. and Popescu, A. and Loni, B.},
-  booktitle={Proceedings of the 5th ACM Multimedia Systems Conference},
-  pages={29--34},
-  year={2014},
-  organization={ACM}
+@InProceedings{ionescu2014retrieving,
+  Title                    = {Retrieving Diverse Social Images at MediaEval 2014: Challenge, Dataset and Evaluation},
+  Author                   = {Ionescu, B. and Popescu, A. and Lupu, A. and Ginsca, A.L. and M{\"u}ller, H.},
+  Booktitle                = {Proceedings of the MediaEval 2014 Multimedia Benchmark Workshop},
+  Year                     = {2014},
+
+  City                     = {Barcelona},
+  Country                  = {Spain}
 }
 
-@inproceedings{szHucs2013bmemtm,
-  title={BMEMTM at MediaEval 2013 Retrieving Diverse Social Images Task: Analysis of Text and Visual Information},
-  author={Sz{\H{u}}cs, G. and Par{\'o}czi, Zs. and Vincz, D.M.},
-  booktitle={Working Notes Proceedings of the MediaEval 2013 Workshop, Barcelona, Spain, October 18-19, CEUR-WS. org, ISSN 1613-0073},
-  year={2013}
+@InProceedings{ionescu2014div400,
+  Title                    = {Div400: a social image retrieval result diversification dataset},
+  Author                   = {Ionescu, B. and Radu, A.-L. and Men{\'e}ndez, M. and M{\"u}ller, H. and Popescu, A. and Loni, B.},
+  Booktitle                = {Proceedings of the 5th ACM Multimedia Systems Conference},
+  Year                     = {2014},
+  Organization             = {ACM},
+  Pages                    = {29--34}
 }
 
-@inproceedings{radu2014hybrid,
-  title={A Hybrid Machine-Crowd Approach to Photo Retrieval Result Diversification},
-  author={Radu, A.-L. and Ionescu, B. and Men{\'e}ndez, M. and St{\"o}ttinger, J. and Giunchiglia, F. and De Angeli, A.},
-  booktitle={Proceedings of International Conference on MultiMedia Modeling, LNCS 8325},
-  pages={25--36},
-  year={2014},
-  organization={Springer}
+@InProceedings{Paroczi2014,
+  Title                    = {DCLab at MediaEval2014 Search and Hyperlinking Task},
+  Author                   = {Par{\'o}czi, Zsombor and Fodor, B{\'a}lint and Szucs, G{\'a}bor},
+  Booktitle                = {Working Notes Proceedings of the MediaEval 2014 Workshop, Barcelona, Spain, October 16-17, CEUR-WS. org, ISSN 1613-0073},
+  Year                     = {2014},
+
+  __markedentry            = {[hidden:6]},
+  Owner                    = {hidden},
+  Timestamp                = {2015.08.20}
 }
 
-@inproceedings{Taneva:2010:GRP:1718487.1718541,
- author = {Taneva, B. and Kacimi, M. and Weikum, G.},
- title = {Gathering and Ranking Photos of Named Entities with High Precision, High Recall, and Diversity},
- booktitle = {Proceedings of the Third ACM International Conference on Web Search and Data Mining},
- series = {WSDM '10},
- year = {2010},
- isbn = {978-1-60558-889-6},
- location = {New York, New York, USA},
- pages = {431--440},
- numpages = {10},
- url = {http://doi.acm.org/10.1145/1718487.1718541},
- doi = {10.1145/1718487.1718541},
- acmid = {1718541},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {image gathering, knowledge base, query expansion, ranking},
+@InProceedings{radu2014hybrid,
+  Title                    = {A Hybrid Machine-Crowd Approach to Photo Retrieval Result Diversification},
+  Author                   = {Radu, A.-L. and Ionescu, B. and Men{\'e}ndez, M. and St{\"o}ttinger, J. and Giunchiglia, F. and De Angeli, A.},
+  Booktitle                = {Proceedings of International Conference on MultiMedia Modeling, LNCS 8325},
+  Year                     = {2014},
+  Organization             = {Springer},
+  Pages                    = {25--36}
 }
 
-@article{rousseeuw1987silhouettes,
-  title={Silhouettes: a graphical aid to the interpretation and validation of cluster analysis},
-  author={Rousseeuw, Peter J},
-  journal={Journal of computational and applied mathematics},
-  volume={20},
-  pages={53--65},
-  year={1987},
-  publisher={Elsevier}
+@Article{rousseeuw1987silhouettes,
+  Title                    = {Silhouettes: a graphical aid to the interpretation and validation of cluster analysis},
+  Author                   = {Rousseeuw, Peter J},
+  Journal                  = {Journal of computational and applied mathematics},
+  Year                     = {1987},
+  Pages                    = {53--65},
+  Volume                   = {20},
+
+  Publisher                = {Elsevier}
 }
+
+@InProceedings{szHucs2013bmemtm,
+  Title                    = {BMEMTM at MediaEval 2013 Retrieving Diverse Social Images Task: Analysis of Text and Visual Information},
+  Author                   = {Sz{\H{u}}cs, G. and Par{\'o}czi, Zs. and Vincz, D.M.},
+  Booktitle                = {Working Notes Proceedings of the MediaEval 2013 Workshop, Barcelona, Spain, October 18-19, CEUR-WS. org, ISSN 1613-0073},
+  Year                     = {2013}
+}
+
+@InProceedings{Taneva:2010:GRP:1718487.1718541,
+  Title                    = {Gathering and Ranking Photos of Named Entities with High Precision, High Recall, and Diversity},
+  Author                   = {Taneva, B. and Kacimi, M. and Weikum, G.},
+  Booktitle                = {Proceedings of the Third ACM International Conference on Web Search and Data Mining},
+  Year                     = {2010},
+
+  Address                  = {New York, NY, USA},
+  Pages                    = {431--440},
+  Publisher                = {ACM},
+  Series                   = {WSDM '10},
+
+  Acmid                    = {1718541},
+  Doi                      = {10.1145/1718487.1718541},
+  ISBN                     = {978-1-60558-889-6},
+  Keywords                 = {image gathering, knowledge base, query expansion, ranking},
+  Location                 = {New York, New York, USA},
+  Numpages                 = {10},
+  Url                      = {http://doi.acm.org/10.1145/1718487.1718541}
+}
+
