--- a/diverse2015.tex
+++ b/diverse2015.tex
@@ -28,7 +28,7 @@ D\'aniel Mira\\
 
 \maketitle
 \begin{abstract}
-TODO abstract
+In this paper we recommend a social image re-ranking method to the MediaEval 2015 Retrieving Diverse Social Images Task in order to increase the accurate of the searching result of Flickr based on the metrics relevance and diversity. In our approach the new ranking is the modification of the original queue, considering and recalculating the diversity to every re-ranked item. We have used color related visual features and text descriptors to define similarity between images with our distance based spectral clustering method.
 \end{abstract}
 
 \section{Introduction}
@@ -44,12 +44,25 @@ In this paper and in this year's challange we used a more sofisticated distance 
 \section{Runs}
 
 \subsection{Run1: Visual based reranking}
+The main idea based on the previous papers \cite{szHucs2013bmemtm,Paroczi2014} is detecting and filtering photos with people (faces) on it, and after the preprocessing phase we build our distance matrix in order to define relevant and diverse images. 
+
+At first sight we designed our method using HOG features, but no significant results could be reached with HOG vector difference. Therefore we recommend a color only based clustering method, without using any other potential features such as shape or texture related descriptors.
+
+The first preprocessing step is calculating two values to the image: first the $FACE$ feature, which is the ratio of the faces on the image, and the second is the ratio of the black color ($CN[0]$) on each image. Using this two values on each images, we are able to increase the diverse and relevance of the result set by putting images to the end of the queue where $FACE=0.0$ or $CN[0]>0.8$. With this step we removed the images with people on it (e.g. family photos) and dark images (e.g. fireworks).
+After the preprocessing steps we build the distance $D1$ matrix between each $A$ and $B$ images: $D1_{AB}=|CN_{A}-CN_{B}|+[5*Diff(CM_{A},CM_{B})]$, where $Diff$ function is the difference of the $CM$ vectors with unique weighting on the different dimensions: $CM[0], .. ,CM[2]: 1; CM[3], .. ,CM[5]: 0.3; CM[6], .. ,CM[8]: 0.1$.
 
 \subsection{Run2: Text based reranking}
+The second subtask was the text based reranking which is accomplished using the title, tags and description fields of each images and then comparison based on TF-IDF numerical statistic and our distance calculating method.
+
+As a preprocessing step we execute a stop words filtering and also remove some special characters which have no value (e.g. html tags). At the next step we calculate TF-IDF values and distance between texts (e.g. description fields) $A$ and $B$ in the following manner. We initalize distance $D2$ as zero and compare $A$ and $B$ in term level. All occurring $t$ terms in document $A$ compared with all terms in document $B$ and so on. If term $t$ is contained by both document, then $D2$ will be increased by $0$. Else, if $t$ contained by only one document, we take into consideration the $DF$: if $DF<5$, then it is a rare term and $D$ increased by $2$; if $DF>DN/4$, then it is a common term and  $D2$ increased by 0.1 (where $DN$ is the total number of documents).
 
 \subsection{Run3: Text + Visual}
+We used our visual distance matrix $D1$ and text distance matrix $D2$ to create a new aggregate matrix $D3$. It is produced by simple summation of the corresponding values of both $D1$ and $D2$ matrix, where the actual item of each matrix corresponds to the same image. We tried different kind of weithing methods, but the pure matrices supplied the best results without any further modification.
 
 \subsection{Run4: Credibility based reranking}
+We present our solution to the credibility subtask which was refined and filtered by $faceProportion$ and $locationSimilarity$ values.
+
+As a first step we re-ranked images which were originally at the end of the queue: each image after the 100th position in the original queue were put the end of the re-ranked queue, in order to increase the relevance of the result set. The $faceProportion$ variable is used to purify the result set by putting the images to the end of the queue, where the face ratio is more than $1.3$. With the purpose of increase the diversity we defined $locationSimilarity$ with a threshold at $3.0$. If the value of the variable exceed the threshold, the image will be moved to the end of the queue. This means, images with similar location  will not be chosen to the result set repeatedly.
 
 \section{Results and Conclusion}
 
