--- a/sigproc.bib
+++ b/sigproc.bib
@@ -2,6 +2,29 @@
 % Encoding: MacRoman
 
 
+@Article{Datta2008,
+  Title                    = {Image Retrieval: Ideas, Influences, and Trends of the New Age},
+  Author                   = {Datta, Ritendra and Joshi, Dhiraj and Li, Jia and Wang, James Z.},
+  Journal                  = {ACM Comput. Surv.},
+  Year                     = {2008},
+
+  Month                    = may,
+  Number                   = {2},
+  Pages                    = {5:1--5:60},
+  Volume                   = {40},
+
+  Acmid                    = {1348248},
+  Address                  = {New York, NY, USA},
+  Articleno                = {5},
+  Doi                      = {10.1145/1348246.1348248},
+  ISSN                     = {0360-0300},
+  Issue_date               = {April 2008},
+  Keywords                 = {Content-based image retrieval, annotation, learning, modeling, tagging},
+  Numpages                 = {60},
+  Publisher                = {ACM},
+  Url                      = {http://doi.acm.org/10.1145/1348246.1348248}
+}
+
 @InProceedings{Task2015,
   Title                    = {Retrieving Diverse Social Images at MediaEval 2015: Challenge, Dataset and Evaluation},
   Author                   = {Ionescu, B. and Popescu, A. and Lupu, A. and Ginsca, A.L. and M{\"u}ller, H.},
@@ -32,6 +55,35 @@
   Pages                    = {29--34}
 }
 
+@InProceedings{Ma2009,
+  Title                    = {Spectral Clustering Ensemble for Image Segmentation},
+  Author                   = {Ma, Xiuli and Wan, Wanggen and Jiao, Licheng},
+  Booktitle                = {Proceedings of the First ACM/SIGEVO Summit on Genetic and Evolutionary Computation},
+  Year                     = {2009},
+
+  Address                  = {New York, NY, USA},
+  Pages                    = {415--420},
+  Publisher                = {ACM},
+  Series                   = {GEC '09},
+
+  Acmid                    = {1543890},
+  Doi                      = {10.1145/1543834.1543890},
+  ISBN                     = {978-1-60558-326-6},
+  Keywords                 = {cluster ensemble, image segmentation., nystrom approximation, spectral clustering},
+  Location                 = {Shanghai, China},
+  Numpages                 = {6},
+  Url                      = {http://doi.acm.org/10.1145/1543834.1543890}
+}
+
+@InProceedings{Ng01onspectral,
+  Title                    = {On Spectral Clustering: Analysis and an algorithm},
+  Author                   = {Andrew Y. Ng and Michael I. Jordan and Yair Weiss},
+  Booktitle                = {ADVANCES IN NEURAL INFORMATION PROCESSING SYSTEMS },
+  Year                     = {2001},
+  Pages                    = {849--856},
+  Publisher                = {MIT Press}
+}
+
 @InProceedings{Paroczi2014,
   Title                    = {DCLab at MediaEval2014 Search and Hyperlinking Task},
   Author                   = {Par{\'o}czi, Zsombor and Fodor, B{\'a}lint and Szucs, G{\'a}bor},
@@ -41,6 +93,24 @@
   __markedentry            = {[hidden:6]},
   Owner                    = {hidden},
   Timestamp                = {2015.08.20}
+}
+
+@InProceedings{Paramita2010,
+  Title                    = {Diversity in Photo Retrieval: Overview of the ImageCLEFPhoto Task 2009},
+  Author                   = {Paramita, Monica Lestari and Sanderson, Mark and Clough, Paul},
+  Booktitle                = {Proceedings of the 10th International Conference on Cross-language Evaluation Forum: Multimedia Experiments},
+  Year                     = {2010},
+
+  Address                  = {Berlin, Heidelberg},
+  Pages                    = {45--59},
+  Publisher                = {Springer-Verlag},
+  Series                   = {CLEF'09},
+
+  Acmid                    = {1885119},
+  ISBN                     = {3-642-15750-5, 978-3-642-15750-9},
+  Location                 = {Corfu, Greece},
+  Numpages                 = {15},
+  Url                      = {http://dl.acm.org/citation.cfm?id=1885110.1885119}
 }
 
 @InProceedings{radu2014hybrid,
@@ -70,7 +140,7 @@
   Year                     = {2013}
 }
 
-@InProceedings{Taneva:2010:GRP:1718487.1718541,
+@InProceedings{Taneva2010,
   Title                    = {Gathering and Ranking Photos of Named Entities with High Precision, High Recall, and Diversity},
   Author                   = {Taneva, B. and Kacimi, M. and Weikum, G.},
   Booktitle                = {Proceedings of the Third ACM International Conference on Web Search and Data Mining},
@@ -88,5 +158,25 @@
   Location                 = {New York, New York, USA},
   Numpages                 = {10},
   Url                      = {http://doi.acm.org/10.1145/1718487.1718541}
+}
+
+@InProceedings{Yeh2008,
+  Title                    = {Video News Retrieval Incorporating Relevant Terms Based on Distribution of Document Frequency},
+  Author                   = {Yeh, Jun-Bin and Wu, Chung-Hsien},
+  Booktitle                = {Proceedings of the 9th Pacific Rim Conference on Multimedia: Advances in Multimedia Information Processing},
+  Year                     = {2008},
+
+  Address                  = {Berlin, Heidelberg},
+  Pages                    = {583--592},
+  Publisher                = {Springer-Verlag},
+  Series                   = {PCM '08},
+
+  Acmid                    = {1504602},
+  Doi                      = {10.1007/978-3-540-89796-5_60},
+  ISBN                     = {978-3-540-89795-8},
+  Keywords                 = {Relevant event term, TFIDF, Term Extraction, Vector Space Model, Video retrieval, boxplot},
+  Location                 = {Tainan, Taiwan},
+  Numpages                 = {10},
+  Url                      = {http://dx.doi.org/10.1007/978-3-540-89796-5_60}
 }
 
